fixed contact spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -514,6 +514,7 @@ textarea {
 	overflow-y: hidden;
 	overflow-x: hidden;
 	& h1 {
+		margin-top: 2rem;
 		font-weight: 300;
 		font-size: 2.5rem;
 		letter-spacing: 15px;
